# CosmicFish

./: .codeclimate.yml  .coverage  .gitignore  .travis.yml  LICENSE  Makefile  README.md  branch_readme.txt  contributors.txt  index.html  index.ipynb
apps/: README.rst  fiducial_calculator.f90  fisher_matrix_calculator.f90  linear_cutoff_calculator.f90  window_function_printer.f90
bundled/: .gitignore  README.rst
bundled/fort_depend/: README.md  fort_depend.py
bundled/numdiff/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.in  NEWS  README  TODO  aclocal.m4  analyze.c  arith.c  cmpfns.c  config.h.in  configure  configure.ac  errors.c  exitfail.c  flags.c  inout.c  io.c  linesplit.c  linesplit.h  main.c  ndselect.c  ndselect.h  new.c  number.c  number.h  numdiff.h  numutil.c  options.c  read_line.c  side.c  system.h  thrlist.c  unlocked-io.h  util.c
bundled/numdiff/docs/: ndselect.1  numdiff.1  numdiff.html  numdiff.info  numdiff.txi  numdiff.txt
bundled/numdiff/m4/: st_mtim.m4
bundled/numdiff/po/ndselect/: it.mo  it.po  ndselect.pot
bundled/numdiff/po/numdiff/: it.mo  it.po  numdiff.pot
camb/: README.rst
camb/camb/: Makefile  Makefile_main  equations.f90  equations_ppf.f90  halofit_ppf.f90  inidriver.F90  modules.f90  params.ini  params_counts.ini  params_lensing.ini  utils.F90
camb/eftcamb/: EFTCAMB_benchmark.F90  EFT_def.f90  EFT_params_counts.ini  EFT_params_lensing.ini  Makefile  Makefile_main  README.rst  cmbmain.f90  equations.f90  equations_EFT.f90  inidriver.F90  lensing.f90  modules.f90  params_counts.ini  utils.F90
camb/mgcamb/: MGC_params.ini  MGC_params_counts.ini  MGC_params_lensing.ini  constants.f90  equations.f90  inidriver.F90  modules.f90  params_21cm.ini  params_counts.ini  params_lensing.ini
documentation/: README.rst
documentation/doxygen/: CosmicFish_doxyfile
documentation/python/: .gitignore  Makefile  conf.py  cosmicfish_pylib_apps.rst  cosmicfish_pylib_colors.rst  cosmicfish_pylib_fisher_derived.rst  cosmicfish_pylib_fisher_matrix.rst  cosmicfish_pylib_fisher_operations.rst  cosmicfish_pylib_fisher_plot.rst  cosmicfish_pylib_fisher_plot_analysis.rst  cosmicfish_pylib_fisher_plot_settings.rst  cosmicfish_pylib_utilities.rst  cosmicfish_todo.rst  example.html  example.ipynb  index.ipynb  index.rst  introduction.rst
examples/: Makefile  README.rst
examples/parameters/: 1_Planck_Pre_Launch.camb.ini  2_DESGC_Planck.camb.ini  3_Planck_Pre_Launch_mnu.camb.ini  3_Planck_pre_launch_DEpar.mgcamb.ini  3_Planck_pre_launch_timepar.mgcamb.ini  3_test.mgcamb.ini  3_varying_alpha.camb.ini  3_varying_alpha.eftcamb.ini  4_Euclid_WL.eftcamb.ini
examples/parameters_analysis/: 1_Planck_Pre_Launch.ini  2_DESGC_Planck.ini  3_Planck_pre_launch_MGpars.ini  3_test.ini  3_varying_alpha.ini  4_Euclid_WL.ini
examples/script/: common.sh  create_target.sh  do_analysis.sh  do_cosmicfish.sh  do_fisher.sh  makefile_target.make  run_params.sh
make_macros/: bundled_software.make  compilers_options.make  documentation.make
python/: README.rst
python/apps/: __init__.py  analysis_options.ini  bounds.py  compare_SN_mocks.py  compare_cls_cov.py  compare_fisher_matrices.py  debug_plotter.py  full_analysis.py  plot_1D.py  plot_2D.py  plot_cls_cov.py  plot_tri.py
python/cosmicfish_pylib/: __init__.py  colors.py  fisher_derived.py  fisher_matrix.py  fisher_operations.py  fisher_plot.py  fisher_plot_analysis.py  fisher_plot_settings.py  utilities.py
python/cosmicfish_pylib_test/: test_colors.py  test_fisher_derived.py  test_fisher_matrix.py  test_fisher_operations.py  test_fisher_plot.py  test_fisher_plot_analysis.py  test_fisher_plot_settings.py  test_utilities.py
script/: README.rst  colors.sh  error_check.sh  prepare_release.sh  test_deploy.sh  test_multiple_deploy.sh
sources/: 000_Compile_time_definitions.f90  000_Utilities.f90  001_Matrix_utilities.f90  001_Numerical_derivatives.f90  001_Tensor_derivatives_2pt.f90  001_Tensor_derivatives_Richardson.f90  001_praxis_minimizer.f90  001_quadpack_double.f90  002_Random_utilities.f90  003_Fisher_manipulation.f90  004_cosmicfish_types.f90  005_init_from_file.f90  006_cosmicfish_camb_interface.f90  007_FUTURCMB_lensnoise.f90  008_Fisher_calculator_Cls.f90  008_Fisher_calculator_Cls_linearization.f90  008_Fisher_calculator_Cls_windows.f90  009_Fisher_calculator_SN.f90  010_Fisher_calculator_Mpk.f90  011_Fisher_calculator_RD.f90  012_Fisher_calculator_derived.f90  013_Fisher_calculator_varalpha.f90  camb_dependency_tree.dep  eftcamb_dependency_tree.dep  mgcamb_dependency_tree.dep
test/: Makefile  README.rst
test/test_build/: .gitignore
test/test_input/: camb_005_params_P_io.input  camb_005_params_io.input  camb_006_camb_interface.input  camb_006_fisher_export.input  camb_008_fisher_cls_calc_1.input  camb_008_fisher_cls_calc_2.input  camb_008_fisher_cls_calc_3.input  camb_008_fisher_cls_compute_fisher.input  camb_008_fisher_cls_derivative_adapt.input  camb_008_fisher_cls_derivative_fixed.input  camb_008_fisher_cls_noise.input  camb_009_fisher_SN_compute_fisher.input  camb_012_fisher_derived_matrix.input  eftcamb_005_params_FP_io.input  eftcamb_005_params_io.input  eftcamb_006_camb_interface.input  eftcamb_006_fisher_export.input  eftcamb_008_fisher_cls_calc_1.input  eftcamb_008_fisher_cls_calc_2.input  eftcamb_008_fisher_cls_calc_3.input  eftcamb_008_fisher_cls_compute_fisher.input  eftcamb_008_fisher_cls_derivative_adapt.input  eftcamb_008_fisher_cls_derivative_fixed.input  eftcamb_008_fisher_cls_noise.input  eftcamb_009_fisher_SN_compute_fisher.input  eftcamb_012_fisher_derived_number.input  mgcamb_005_params_P_io.input  mgcamb_005_params_io.input  mgcamb_006_camb_interface.input  mgcamb_006_fisher_export.input  mgcamb_008_fisher_cls_calc_1.input  mgcamb_008_fisher_cls_calc_2.input  mgcamb_008_fisher_cls_calc_3.input  mgcamb_008_fisher_cls_compute_fisher.input  mgcamb_008_fisher_cls_derivative_adapt.input  mgcamb_008_fisher_cls_derivative_fixed.input  mgcamb_008_fisher_cls_noise.input  mgcamb_009_fisher_SN_compute_mag.input  mgcamb_012_fisher_derived_compute.input  mgcamb_012_fisher_derived_names.input
(+165 files in other folders)
